<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.sorashiro.desktoppet.MainActivity">

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/generate_lemonyi"/>


    <Button
        android:id="@+id/btnRemove"
        android:layout_below="@id/btnGenerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/byebye_lemonyi"
        />

    <Button
        android:id="@+id/btnAbout"
        android:layout_below="@id/btnRemove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_this_app"/>

</RelativeLayout>
